--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,6 @@
 </head>
 <body>
     <h1>Transmisión en Vivo</h1>
-    <img src="{{ url_for('video_feed') }}" width="640" height="480">
-    <button id="capture-btn">Capturar Imagen</button>
-    <p id="message"></p>
 
     <div class="tm-page-wrap mx-auto">
 
@@ -29,6 +26,7 @@
 							<!-- Video player 1422x800 -->
 							<img width="640" height="480" controls autoplay src="{{ url_for('video_feed') }}">
 						</div>
+                        <p id="message"></p>
 					</div>
                     <div class="mt-3">
                         <button id="start-btn" class="btn btn-success">Iniciar</button>
@@ -130,7 +128,7 @@
 
         $('#start-btn').click(function(){
             $.ajax({
-                url: '/start',
+                url: '/start_recording',
                 type: 'POST',
                 success: function(response){
                     $('#message').text(response.message);
@@ -143,7 +141,7 @@
 
         $('#stop-btn').click(function(){
             $.ajax({
-                url: '/stop',
+                url: '/stop_recording',
                 type: 'POST',
                 success: function(response){
                     $('#message').text(response.message);
