Galeria de fotos funcional

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,8 @@
         <button id="capture-btn" class="btn btn-primary">Tomar Captura</button>
       </div>
 
-      <button id="gallery-btn" class="btn btn-primary">Galería</button>
+      <a href="/gallery/gallery" target="_blank" class="btn btn-primary" id="gallery-btn">Galería</a>
+
       <p id="message" class="mt-3"></p>
     </body>
   </body>
