--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,9 +1,10 @@
 
     body {
-        background-color: #f0f0f0;
-        font-family: 'Source Sans Pro', sans-serif;
+        font-family: Arial, sans-serif;
+        background-color: #f4f4f9;
         text-align: center;
-    }
+    }   
+
 
     h1 {
         margin-top: 20px;
@@ -104,5 +105,95 @@
     .btn:hover {
         opacity: 0.9;
         transition: 0.3s ease;
+    }
+    
+    .container {
+        padding: 50px 20px;
+    }
+    
+    .description {
+        font-size: 1.2rem;
+        color: #6c757d;
+        margin-bottom: 40px;
+    }
+    
+    .folder-grid {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 20px;
+        padding: 0 20px;
+    }
+    
+    .folder-card {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s, box-shadow 0.3s;
+        overflow: hidden;
+    }
+    
+    .folder-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    }
+    
+    .folder-card a {
+        text-decoration: none;
+        color: #333;
+        display: block;
+        padding: 20px;
+    }
+    
+    .folder-icon {
+        font-size: 3rem;
+        margin-bottom: 10px;
+    }
+    
+    .folder-name {
+        font-size: 1.2rem;
+        font-weight: bold;
+    }
+    
+    a {
+        display: inline-block;
+        margin: 15px 0;
+        text-decoration: none;
+        font-size: 1rem;
+        color: #3498db;
+    }
+    
+    a:hover {
+        text-decoration: underline;
+    }
+    
+    .gallery-container {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 20px;
+        padding: 20px;
+    }
+    
+    .gallery-item {
+        background-color: #ffffff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+        transition: transform 0.3s, box-shadow 0.3s;
+    }
+    
+    .gallery-item img {
+        width: 100%;
+        height: auto;
+        border-radius: 10px;
+        transition: transform 0.3s;
+    }
+    
+    .gallery-item img:hover {
+        transform: scale(1.1);
+    }
+    
+    .gallery-item:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
     }
     
