--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -165,4 +165,4 @@
     </div>
 </body>
 
-</html>
+</html> {% endcomment %}
