--- a/templates/gallery_menu.html
+++ b/templates/gallery_menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -22,4 +22,4 @@
         </div>
     </div>
 </body>
-</html>
+</html> {% endcomment %}
