--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
@@ -47,4 +47,4 @@
       <p id="message" class="mt-3"></p>
     </body>
   </body>
-</html>
+</html> {% endcomment %}
